2003-01-12  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp: added some debugging for DDRAW and DINPUT
	* src/win32/Win32.cpp: changed rendering when menu is active with triple buffering

2003-01-11  Forgotten  <forgotten@users.sourceforge.net>

	* src/GBA.cpp (CPULoop): set emulation speed value
	* src/win32/Win32.cpp: added support for fullscreen speed display
	* src/win32/Win32.cpp: support for triple buffering in fullscreen mode
	* src/gb/GB.cpp (gbEmulate): set emulation speed value
	* src/SDL.cpp: added support for fullscreen speed display

2003-01-08  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (systemMessage): fixed problem displaying error messages in fullscreen mode
	* src/win32/Win32.cpp: added support to other resolutions for fullscreen mode

2003-01-05  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (detectMMX): added support for AMD CPUs
	* src/win32/TileViewer.cpp: now shows all tiles in 256 mode
	* src/elf.cpp (elfCleanUp): fixed crash when reloading an ELF file
	* src/win32/Commands.cpp: added interframe blending commands
	* src/win32/Win32.cpp: added interframe blending support
	* src/SDL.cpp: added interframe blending support

2003-01-03  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp: added bilinear filter support
	* src/SDL.cpp: added bilinear filter support

2002-12-11  Forgotten  <forgotten@users.sourceforge.net>

	* src/Flash.cpp (flashSetSize): fixed reversed device ID and manufacturer ID

2002-12-09  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Win32.cpp (fileExportGSASnapshot): change default title to internal name
	* src/win32/Win32.cpp (WindowProc): added sound volume option
	* src/win32/Win32.cpp (updateFileMenu): allow pausing even if not emulating yet
	* src/win32/Win32.cpp: added AVI writing support

2002-12-02  Forgotten  <forgotten@users.sourceforge.net>

	* src/win32/Commands.cpp: added missing options