@@ -152,5 +152,13 @@ soundVolume     0
 ifbType         0
 
 # Show emulation speed
-# 0=no, anything for yes
+# 0=none, 1=percentage, 2=detailed
 showSpeed       1
+
+# Show speed in transparent mode
+# 0=normal, anything else for transparent
+showSpeedTransparent    1
+
+# Enable/Disable auto frameskip
+# 0=disable, anything else to enable
+autoFrameSkip   0
